--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,8 @@
 # Site settings
 title: Samantha North
 email: samanthajmnorth@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: > # 
+  Intersecting tech and the written word 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://sjnorth.github.io" # the base hostname & protocol for your site
 twitter_username: placesbrands
