updated snippet bio

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Samantha North
 email: samanthajmnorth@gmail.com
 description: > # 
-  Intersecting tech and the written word 
+  Journalist focusing on where tech collides with the written word. Jekyll addict. Mandarin speaker. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://sjnorth.github.io" # the base hostname & protocol for your site
 twitter_username: placesbrands
