--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,11 @@
 title: Samantha North
 email: samanthajmnorth@gmail.com
 description: > # 
-  Journalist focusing on where tech collides with the written word. Jekyll addict. Mandarin speaker. 
+  Journalist focusing on the intersection of tech and the written word. Jekyll addict. Mandarin speaker. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://sjnorth.github.io" # the base hostname & protocol for your site
 twitter_username: placesbrands
 github_username: sjnorth
-paginate: 7
 
 # Build settings
 markdown: kramdown
