--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Samantha North
+title: From Bylines to Binary 
 email: samanthajmnorth@gmail.com
 description: > # 
   Journalist focusing on the intersection of tech and the written word. Jekyll addict. Mandarin speaker. 
